--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #A9D3E9;
 }
 
 main {
@@ -27,12 +28,12 @@ main {
 .grid-view div.card.ui {
   margin: 1.25rem;
 }
-/*
+
 .main-img {
   display: block;
-  border-radius: 100%;
+  border-radius: 10%;
   margin: 0 auto;
-} */
+} 
 
 header h1 {
   text-align: center;
